5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1643_1054.log
== TEST (2019-04-10 19:29:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do Harry Potter"
else:
	
   mensagem = "nao eh patrono do Harry Potter"  

print(harry, mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(harry =="cervo"):
NameError: name 'harry' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:29:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do Harry Potter"
else:
	
   mensagem = "nao eh patrono do Harry Potter"  

print(harry, mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(harry =="cervo"):
NameError: name 'harry' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:36:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("digitea a coordenada:"))
y = int(input("digite a coordenada:"))
if((2*x)+y ==3):
	
	mensagem = "ponto pertence a reta"
else:
	
   mensagem = "ponto nao pertence a reta"  

print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:37:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("digitea a coordenada:"))
y = int(input("digite a coordenada: "))
if((2*x)+y ==3):
	
	mensagem = "ponto pertence a reta"
else:
	
   mensagem = "ponto nao pertence a reta"  

print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:38:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("digitea a coordenada:"))
y = int(input("digite a coordenada: "))
if((2*x)+y ==3):
	
	mensagem = "ponto pertence a reta"
else:
	
   mensagem = "ponto nao pertence a reta"  

print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:53:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input())
y = float(input())
if((2*x)+y ==3):
	mensagem = "ponto pertence a reta"
else:
	 mensagem = "ponto nao pertence a reta"  

print(mensagem)
-- EXECUTION TIME:
0.117832
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
